# recmd

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
docker/: env
docker/build-static/: Dockerfile
docker/test/: Dockerfile
docs/: build-docker.md
scripts/: recmd_docker_build.sh  recmd_docker_build_build.sh  recmd_docker_build_rm.sh  recmd_docker_build_static.sh  recmd_docker_build_static_build.sh  recmd_docker_build_static_min.sh  recmd_docker_build_static_rm.sh  recmd_docker_test.sh  recmd_docker_test_build.sh  recmd_docker_test_rm.sh
src/: cmd.rs  config.rs  crypt.rs  lib.rs  main.rs  message.rs  snd.rs  srv.rs
tests/: localhost.rs
