[package]
name = "recmd"
version = "0.2.0"
edition = "2021"
authors = ["0xor0ne <0xor0ne@gmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xor0ne/recmd"
documentation = "https://docs.rs/recmd"
homepage = "https://github.com/0xor0ne/recmd/blob/master/README.md"
readme = "README.md"
keywords = ["cli", "redteam", "security", "networking"]
categories = ["command-line-utilities", "network-programming"]
description = """
Remote Commands Executor
"""

[dependencies]
argh = "0.1.10"
chacha20poly1305 = "0.10.1"
sha2 = "0.10.6"
bytes = "1.4.0"
byteorder = "1.4.3"
nom = "7.1.3"
shell-words = "1.1.0"
hex = "0.4.3"

[target.'cfg(unix)'.dependencies]
daemonize = "0.5.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
